After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 600852 - Error when resolving redirect URIs
Error when resolving redirect URIs
Status: RESOLVED FIXED
Product: totem
Classification: Core
Component: Browser plugin (obsolete)
2.28.x
Other Linux
: Normal normal
: ---
Assigned To: totem-browser-maint
totem-browser-maint
Depends on:
Blocks:
 
 
Reported: 2009-11-05 18:04 UTC by Simon Pecher
Modified: 2009-11-16 13:07 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch for the redirect issue (572 bytes, patch)
2009-11-05 18:04 UTC, Simon Pecher
committed Details | Review

Description Simon Pecher 2009-11-05 18:04:51 UTC
Created attachment 147025 [details] [review]
Patch for the redirect issue

If the plugin-viewer gets a redirect to an absolute URL it may corrupt the
redirect-URL by trying to append it to either "emb->stream_uri",
"emb->current_uri" or "emb->base_uri" by calling "resolve_redirect". I suppose
absolute URLs should not be processed any further by "resolve_redirect", should
they? Appending an else after the first if-statement may solve this issue.  

(The error occured while I tried to watch wmv videos on
http://www.3sat.de/mediathek/mediathek.php)