Error when resolving redirect URIs

If the plugin-viewer gets a redirect to an absolute URL it may corrupt
the redirect-URL by trying to append it to either "emb->stream_uri",
"emb->current_uri" or "emb->base_uri" by calling "resolve_redirect". I suppose
absolute URLs should not be processed any further by "resolve_redirect",
should they?

Appending an else after the first if-statement may solve this issue.

(The error occured while I tried to watch wmv videos on
http://www.3sat.de/mediathek/mediathek.php)

https://bugzilla.gnome.org/show_bug.cgi?id=600852